# alumi-lang

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  conanfile.txt  readme.md
lib/: CMakeLists.txt
lib/alccemy/: .clang-format  CMakeLists.txt
lib/alccemy/examples/: CMakeLists.txt
lib/alccemy/examples/arintegra/: CMakeLists.txt
lib/alccemy/examples/arintegra/src/: main.cpp
lib/alccemy/modules/: alccemy.ixx
lib/alccemy/modules/lexer/: concepts.ixx  errors.ixx  lexer.ixx  patterns.ixx  text.ixx  token.ixx  tokenized_text.ixx  unicode.ixx
lib/alccemy/modules/lexer/rules/: concepts.ixx  indention.ixx  rules.ixx  types.ixx
lib/alccemy/modules/util/: tuple.ixx  unique_type_args.ixx  variant.ixx
lib/alccemy/test/: CMakeLists.txt
lib/alccemy/test/src/lexer/: test_lexer.cpp  test_patterns.cpp
lib/alccemy/test/src/util/: test_tuple.cpp  test_unique_type_args.cpp
lib/alumilib/: CMakeLists.txt
lib/alumilib/include/alumi/: error_codes.h  lexer.h  module.h  parser.h  syntax_tree.h  text_pos.h
lib/alumilib/include/alumi/lexer/: alumi_lexicon.h  lexed_text.h  lexer_detail.h  token.h
lib/alumilib/include/alumi/parser/: data.h  parse_rule.h  parser_error_codes.h  parser_parts.h
lib/alumilib/include/alumi/parser/grammar/: rule_macro.h
lib/alumilib/include/alumi/syntax_tree/: modue_tree.h  node_children.h  node_detail.h  node_types.h  node_utils.h  nodes.h  tree_nodes.h  tree_utiltiy_ops.h  util_ops.h  walker.h
lib/alumilib/modules/parser/: error_codes.ixx  parser.ixx  result.ixx  subparser.ixx
lib/alumilib/modules/parser/combinator/: any_of.ixx  combinator.ixx  concepts.ixx  dedented.ixx  indented.ixx  is.ixx  no_indent.ixx  optional.ixx  peek.ixx  repeats.ixx  repeats_with_separator.ixx  rule.ixx  sequence.ixx  swallow.ixx
lib/alumilib/modules/parser/grammar/: assignment.ixx  code_block.ixx  expression.ixx  function_call.ixx  function_declaration.ixx  function_definition.ixx  function_parameter.ixx  grammar.ixx  root.ixx  statement.ixx  tuple.ixx  value.ixx
lib/alumilib/modules/syntax_tree/: syntax_tree.ixx
lib/alumilib/modules/syntax_tree/node_builder/: nodes_builder.ixx
lib/alumilib/modules/syntax_tree/nodes/: node.ixx  nodes.ixx  operations.ixx  types.cpp  types.ixx
lib/alumilib/source/alumi/: lexer.cpp  parser.cpp  syntax_tree.cpp  text_pos.cpp
lib/alumilib/source/alumi/lexer/: lexed_text.cpp  lexer_detail.cpp  token.cpp
lib/alumilib/source/alumi/parser/: data.cpp  parse_rule.cpp  parser_parts.cpp
lib/alumilib/source/alumi/syntax_tree/: module_tree.cpp  node_children.cpp  node_detail.cpp  node_types.cpp  node_utils.cpp  nodes.cpp  tree_nodes.cpp  tree_utiltiy_ops.cpp  uitl_ops.cpp  walker.cpp
lib/alumilib/test/: CMakeLists.txt
lib/alumilib/test/src/alumi/lexer/: test_lexer.cpp  test_lexer_detail.cpp  test_lexicon.cpp
lib/alumilib/test/src/alumi/parser/: test_parse_rule.cpp  test_parser.cpp  test_parser_parts.cpp
lib/alumilib/test/src/syntax_tree/: test_nodes.cpp  test_tree_nodes.cpp
test_examples/: hello_world.alu
